--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,6 @@ test:
 
 production:
   adapter: postgresql
+  host: ec2-107-21-114-132.compute-1.amazonaws.com
   database: d2pc35ph8t112t
-  pool: 5
-  timeout: 5000
+  username: yuhimibbldnbws
