--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,8 @@ test:
 production:
   adapter: postgresql
   host: ec2-107-21-114-132.compute-1.amazonaws.com
+  encoding: unicode
   database: d2pc35ph8t112t
-  username: yuhimibbldnbws
+  pool: 5
+  username:
+  password:
