--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,5 @@ test:
 production:
 
   <<: *default
-  database: db/production.sqlite3
+  url:url: postgres://yuhimibbldnbws:IzChp4NYyY_MOy70XX0kAFvvIy@ec2-107-21-114-132.compute-1.amazonaws.com:5432/d2pc35ph8t112t
 
