--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   timeout: 5000
   pool: 5
+  username: postgres
+  password: betar2626
+  database: utf8
 
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: hotelwherever
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
-
+  database: hotelwherever
 production:
 
   <<: *default
