--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   pool: 5
   username: postgres
   password: betar2626
-  database: utf8
+  encoding: utf8
 
 
 development:
@@ -26,5 +26,5 @@ test:
 production:
 
   <<: *default
-  url:url: postgres://yuhimibbldnbws:IzChp4NYyY_MOy70XX0kAFvvIy@ec2-107-21-114-132.compute-1.amazonaws.com:5432/d2pc35ph8t112t
+  url: <%= ENV['postgres://yuhimibbldnbws:IzChp4NYyY_MOy70XX0kAFvvIy@ec2-107-21-114-132.compute-1.amazonaws.com:5432/d2pc35ph8t112t'] %>
 
