--- a/config/database.yml
+++ b/config/database.yml
@@ -22,9 +22,4 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: hotelwherever
-production:
-
-
-  url: <%= ENV['postgres://yuhimibbldnbws:IzChp4NYyY_MOy70XX0kAFvvIy@ec2-107-21-114-132.compute-1.amazonaws.com:5432/d2pc35ph8t112t'] %>
-
+  database: hotelwherever2
