--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ default: &default
   pool: 5
   username: postgres
   password: betar2626
-  encoding: utf8
+  encoding: unicode
 
 
 development:
@@ -23,3 +23,6 @@ development:
 test:
   <<: *default
   database: hotelwherever2
+
+production:
+  url: <%= ENV['DATABASE_URL'] %>
