--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,6 @@ test:
   database: hotelwherever2
 
 production:
-  url: <%= ENV['DATABASE_URL'] %>
+  url: postgres://yuhimibbldnbws:IzChp4NYyY_MOy70XX0kAFvvIy@ec2-107-21-114-132.compute-1.amazonaws.com:5432/d2pc35ph8t112t
+  adapter: postgresql
+  prepared_statements: false
